# Voice2Text

./: .gitignore  DESIGN.md  LICENSE  README.md  THIRD-PARTY-MODELS.md
app/: Cargo.toml  package-lock.json  package.json
app/llama-sidecar/: Cargo.toml
app/llama-sidecar/src/: main.rs
app/src-tauri/: Cargo.toml  installer.conf.json  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: audio.rs  commands.rs  config.rs  main.rs  paths.rs  streaming.rs  summary.rs
app/src-tauri/src/pipeline/: aec.rs  capture.rs  corrector.rs  diarize.rs  echo.rs  events.rs  mod.rs  seglog.rs  text.rs  transcript.rs  whisper.rs
app/ui/: index.html  style.css
app/ui/js/: capture.js  controls.js  exporter.js  main.js  render.js  settings.js  state.js  status.js  statusbar.js  summary.js  tauri.js
app/whisper-sidecar/: Cargo.toml
app/whisper-sidecar/src/: main.rs
live-stream/: Cargo.toml
live-stream/src/: main.rs  render.rs
live-stt/: Cargo.toml
live-stt/src/: main.rs
m05-whisper-cuda/: Cargo.toml
m05-whisper-cuda/src/: main.rs
m1-capture/: Cargo.toml
m1-capture/src/: main.rs
m35-sherpa/: Cargo.toml
m35-sherpa/src/: main.rs
models/: README.md
scripts/: Build-Cuda.ps1  Build-Installer.ps1  Build-M05.ps1  Fetch-Models.ps1  Get-GgmlModels.ps1  Get-SherpaModel.ps1  Make-TestWav.ps1  Publish-Release.ps1  Run-LiveStream.ps1  Run-LiveStt.ps1  Run-M05.ps1  Run-M1.ps1  Setup-M0.ps1  Stage-Portable.ps1  m0_validate.py
stt-sidecar/: requirements.txt
